<resources>
    <string name="app_name">PharmacyArg</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="pharmacy_icon_description">Pharmacy icon</string>
    <string name="call_content_description">Call button</string>
    <string name="share_content_description">Share button</string>
    <string name="address_content_description">Address button</string>

    <string name="api_url">https://pharmacy-admin-arg.herokuapp.com/api/</string>
    <string name="api_token">5be1fcc07510db3da52774ef2211261a0eddaaab</string>
    <string name="permission_request">Permission request</string>
    <string name="permission_justification">Permission required to continue</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="response_error">Response error</string>
    <string name="request_error">Request error</string>
    <string name="pharmacy_shift_text">Today\'s shift</string>
    <string name="pharmacy_shift_text_tomorrow">Next</string>
    <string name="Important_information">Important information</string>
    <string name="refresh_description">Refresh</string>
    <string name="title_activity_main_multi">MainActivityMulti</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="date_to">"To "</string>
    <string name="time_to">at</string>
    <string name="date_error">Date error</string>
    <string name="granted">Permission granted</string>
    <string name="denied">Permission denied</string>
    <string name="share_msg">"Today's shift: "</string>
    <string name="share_title">Share</string>
    <string name="info_description">Information</string>
    <string name="error_title">Error</string>
    <string name="retry">Retry</string>
    <string name="app_description">App to get the current pharmacy shift.  Using: -FancyButtons -Retrofit2 -OkHTTP3  JAB-Salto</string>
    <string name="no_data_found">No pharmacy loaded for this day</string>

</resources>