<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="1dp">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_information"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:contentDescription="@string/info_description"
            android:focusable="true"
            android:padding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            fancy:fb_defaultColor="#00009688"
            fancy:fb_focusColor="@color/colorAccent"
            fancy:fb_fontIconResource="&#xf129;"
            fancy:fb_fontIconSize="20dp"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_iconPosition="right"
            fancy:fb_radius="32dp"
            fancy:fb_text=""
            fancy:fb_textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/pharmacy_icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_refresh"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:contentDescription="@string/refresh_description"
            android:focusable="true"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            fancy:fb_defaultColor="#00009688"
            fancy:fb_focusColor="@color/colorAccent"
            fancy:fb_fontIconResource="&#xf021;"
            fancy:fb_fontIconSize="20dp"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="32dp"
            fancy:fb_text=""
            fancy:fb_textColor="#FFFFFF" />

        <TextView
            android:id="@+id/pharmacy_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:elevation="10dp"
            app:cardBackgroundColor="#B4FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:contentPadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pharmacy_city">

            <FrameLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pharmacy_shift_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/pharmacy_shift_text"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/pharmacy_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textAlignment="center"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/pharmacy_date_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pharmacy_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pharmacy_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/button_address"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="0dp"
                        fancy:fb_defaultColor="@color/colorPrimaryDark"
                        fancy:fb_focusColor="@color/colorAccent"
                        fancy:fb_fontIconResource="&#xf041;"
                        fancy:fb_fontIconSize="28dp"
                        fancy:fb_iconPaddingLeft="0dp"
                        fancy:fb_iconPaddingRight="0dp"
                        fancy:fb_iconPosition="left"
                        fancy:fb_radius="50dp"
                        fancy:fb_text=""
                        fancy:fb_textColor="#FFFFFF" />

                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/button_call"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="0dp"
                        fancy:fb_defaultColor="@color/colorPrimaryDark"
                        fancy:fb_focusColor="@color/colorAccent"
                        fancy:fb_fontIconResource="&#xf095;"
                        fancy:fb_fontIconSize="28dp"
                        fancy:fb_iconPaddingLeft="0dp"
                        fancy:fb_iconPaddingRight="0dp"
                        fancy:fb_iconPosition="left"
                        fancy:fb_radius="50dp"
                        fancy:fb_text=""
                        fancy:fb_textColor="#FFFFFF" />

                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/button_share"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="0dp"
                        fancy:fb_defaultColor="@color/colorPrimaryDark"
                        fancy:fb_focusColor="@color/colorAccent"
                        fancy:fb_fontIconResource="&#xf1e0;"
                        fancy:fb_fontIconSize="28dp"
                        fancy:fb_iconPaddingLeft="0dp"
                        fancy:fb_iconPaddingRight="0dp"
                        fancy:fb_iconPosition="left"
                        fancy:fb_radius="50dp"
                        fancy:fb_text=""
                        fancy:fb_textColor="#FFFFFF" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_tomorrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:elevation="10dp"
            app:cardBackgroundColor="#B4FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:contentPadding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_today">

            <FrameLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pharmacy_shift_text_tomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/pharmacy_shift_text_tomorrow"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/pharmacy_name_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:textAlignment="center"
                    android:textSize="30sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:elevation="10dp"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:contentPadding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_tomorrow">

            <FrameLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#FFC107" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/important_msg_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Important_information"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/important_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>